--- a/serverless.yml
+++ b/serverless.yml
@@ -11,9 +11,9 @@
 #
 # Happy Coding!
 
-service: test-sls-deploy-preview
+service: test-sls
 # app and org for use with dashboard.serverless.com
-app: test-sls
+app: api
 org: cartql
 
 # You can pin your service to only deploy with a specific Serverless version
@@ -60,13 +60,13 @@ provider:
 functions:
   hello:
     handler: handler.hello
-    #    The following are a few example events you can configure
-    #    NOTE: Please make sure to change your handler code to work with those events
-    #    Check the event documentation for details
-    events:
-      - http:
-          path: hello
-          method: get
+#    The following are a few example events you can configure
+#    NOTE: Please make sure to change your handler code to work with those events
+#    Check the event documentation for details
+#    events:
+#      - http:
+#          path: users/create
+#          method: get
 #      - websocket: $connect
 #      - s3: ${env:BUCKET}
 #      - schedule: rate(10 minutes)
