confirm with route53

--- a/serverless.yml
+++ b/serverless.yml
@@ -109,3 +109,13 @@ functions:
 #     NewOutput:
 #       Description: "Description for the output"
 #       Value: "Some output value"
+
+plugins:
+  - serverless-domain-manager
+
+custom:
+  customDomain:
+    domainName: sls.cartql.com
+    basePath: ""
+    stage: ${self:provider.stage}
+    createRoute53Record: true
